--- a/angular.json
+++ b/angular.json
@@ -55,6 +55,14 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "es":{
+              "aot": true,
+              "outputPath": "dist/i18ntranslate/",
+              "i18nFile": "locale/messages.es.xlf",
+              "i18nFormat": "xlf",
+              "i18nLocale": "es",
+              "i18nMissingTranslation": "error"
             }
           }
         },
@@ -66,6 +74,9 @@
           "configurations": {
             "production": {
               "browserTarget": "login:build:production"
+            },
+            "es":{
+              "browserTarget": "login:build:es"
             }
           }
         },
