--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "@angular/compiler": "~11.2.5",
     "@angular/core": "~11.2.5",
     "@angular/forms": "~11.2.5",
+    "@angular/localize": "~11.2.5",
     "@angular/platform-browser": "~11.2.5",
     "@angular/platform-browser-dynamic": "~11.2.5",
     "@angular/router": "~11.2.5",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "angular-bootstrap-md": "^11.0.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.15.6",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3",
-    "@angular/localize": "~11.2.5"
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.3",
